--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "owl",
   "main": "app.js",
+  "engines": {
+    "node": "8.9.0",
+    "npm": "5.5.1"
+  },
   "scripts": {
     "dev": "nodemon app.js",
     "start": "node app.js",
