--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "poloniex-api-node": "^1.8.1"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "mocha": "^5.0.1",
     "nodemon": "^1.15.1"
   }
 }
