--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "lodash": "^4.17.5",
+    "mongoose": "^5.0.9",
     "poloniex-api-node": "^1.8.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "mocha": "^5.0.1",
+    "mockgoose": "^7.3.5",
     "nodemon": "^1.15.1"
   }
 }
