--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "engines": {
     "node": "8.9.0",
-    "npm": "5.5.1"
+    "npm": "5.7.1"
   },
   "scripts": {
     "start": "nodemon app.js",
@@ -32,6 +32,7 @@
     "express": "^4.16.2",
     "lodash": "^4.17.5",
     "mongoose": "^5.0.9",
+    "npm": "^5.7.1",
     "poloniex-api-node": "^1.8.1"
   },
   "devDependencies": {
