--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,15 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch via NPM",
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
-      "program": "${workspaceFolder}/app.js"
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": [
+        "run-script", "debug"
+      ],
+      "port": 9229
     },
     {
         "name": "Launch Firefox",
