--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "nodemon app.js",
     "debug": "node --inspect-brk app.js",
-    "test": "mocha"
+    "test": "mocha --exit './src/api/**/*.test.js"
   },
   "repository": {
     "type": "git",
