Updates to user unit tests

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,6 @@
-MONGODB_URI='mongodb://localhost:27017/owl'
+MONGODB_URI='mongodb://localhost:27017/'
+APP_DB=owl
+TEST_DB=test
 PORT=8080
 HOST=localhost
 NODE_ENV=development
