--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "mongoose": "^5.0.9",
     "node-oauth2-server": "^2.4.0",
     "npm": "^5.8.0",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
     "poloniex-api-node": "^1.8.1"
   },
   "devDependencies": {
