--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-MONGODB_URI='mongodb://localhost:27017/'
+MONGODB_URI='mongodb://localhost:27017'
 APP_DB=owl
-PORT=8080
+PORT=8064
 HOST=localhost
 NODE_ENV=development
