--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "lodash": "^4.17.5",
+    "luxon": "^1.3.3",
     "mongoose": "^5.0.9",
     "node-oauth2-server": "^2.4.0",
     "npm": "^5.8.0",
