--- a/package.json
+++ b/package.json
@@ -27,30 +27,30 @@
   },
   "homepage": "https://github.com/cryptoplayground/crypto-server#readme",
   "dependencies": {
-    "bcrypt": "^3.0.1",
-    "bluebird": "^3.5.1",
+    "bcrypt": "^3.0.3",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
-    "cors": "^2.8.4",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.2",
+    "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
     "https-proxy-agent": "^2.2.1",
     "lodash": "^4.17.5",
-    "luxon": "^1.3.3",
-    "mongoose": "^5.2.17",
+    "luxon": "^1.9.0",
+    "mongoose": "^5.4.2",
     "node-oauth2-server": "^2.4.0",
-    "npm": "^6.4.1",
+    "npm": "^6.5.0",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "poloniex-api-node": "^1.8.1",
-    "sshpk": "^1.14.2",
-    "superagent": "^4.0.0-beta.5"
+    "sshpk": "^1.16.0",
+    "superagent": "^4.1.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^4.2.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
     "mocha": "^5.2.0",
     "mockgoose": "^7.3.5",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.9"
   }
 }
